--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
     <!-- My CSS-->
     <link rel="stylesheet" href="css/myStyle.css">
     <link rel="stylesheet" href="css/responsive.css">
+
     <title>Jamur Ulim Igun</title>
+    <link rel="shortcut icon" type="image/x-icon" href="img/icon-mushrooms.svg">
+
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="" alt="">Navbar
+          <img src="img/icon-mushrooms.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+          Ulim Igun Jamur
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -42,6 +46,76 @@
       </div>
     </nav>
     <!-- End Navbar -->
+
+    <!-- Carousel-->
+    <section class="myCarousel" id="myCarousel">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/jamur-1.jpg" class="d-block w-100" alt="...">
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>First slide label</h1>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/jamur-2.jpg" class="d-block w-100" alt="...">
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>Second slide label</h1>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>            
+          </div>
+          <div class="carousel-item">
+            <img src="img/jamur-3.jpg" class="d-block w-100" alt="...">
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>Third slide label</h1>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
+    <!-- End Carousel-->
+
+    <!-- Address & Contact Us -->
+    <section class="addrsContact" id="addrsContact">
+      <div class="container">
+        <div class="row">
+          <div class="col-6-sm">
+              <div class="address-container">
+                <div class="address=content">
+                  <img src="" alt="" width="30" height="24">
+                  <p>Alamat</p>
+                  <p>Untuk informasi alamat lebih lengkap silakan klik tombol dibawah</p>
+                </div>
+              </div>
+          </div>
+          <div class="col-6-sm">
+
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Address & Contact Us -->
 
     <!-- Optional JavaScript; choose one of the two! -->
 
