--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/carousel.css">
 
     <!-- My CSS-->
     <link rel="stylesheet" href="css/myStyle.css">
@@ -18,7 +19,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="img/icon-mushrooms.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
@@ -97,25 +98,89 @@
     <!-- End Carousel-->
 
     <!-- Address & Contact Us -->
-    <section class="addrsContact" id="addrsContact">
-      <div class="container">
-        <div class="row">
-          <div class="col-6-sm">
-              <div class="address-container">
-                <div class="address=content">
-                  <img src="" alt="" width="30" height="24">
-                  <p>Alamat</p>
-                  <p>Untuk informasi alamat lebih lengkap silakan klik tombol dibawah</p>
-                </div>
+    <section class="addrsContact" id="addrsContact">      
+      <div class="row" style="height: -webkit-fill-available;">
+        <div class="col-sm-6 text-center address">
+            <div class="address-container container">
+              <div class="address-content">
+                <img src="img/location.svg" alt="" style="width: 50px;">
+                <p class="mt-4 mb-2" style="font-size: 20px;">Alamat</p>
+                <p>Untuk melihat alamat yang lebih detail silakan klik tombol dibawah.</p>
+                <a class="btn" href="#" role="button">Selengkapnya</a>
               </div>
-          </div>
-          <div class="col-6-sm">
+            </div>
+        </div>
 
+        <div class="col-sm-6 text-center contact">
+          <div class="contact-container container">
+            <div class="contact-content">
+              <img src="img/phone-call.svg" alt="" style="width: 50px;">
+              <p class="mt-4 mb-2" style="font-size: 20px;">Kontak</p>
+              <p>Untuk informasi lebih lanjut silakan hubungi saya dengan klik tombol dibawah.</p>
+              <a class="btn" href="#" role="button">Selengkapnya</a>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- End Address & Contact Us -->
+
+    <!-- Marketing messaging and featurettes
+  ================================================== -->
+  <!-- Wrap the rest of the page in another container to center all the content. -->
+
+  <div class="container marketing">    
+    <!-- START THE FEATURETTES -->
+
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">First featurette heading. <span class="text-highlight">It’ll blow your mind.</span></h2>
+        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+      </div>
+      <div class="col-md-5">
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7 order-md-2">
+        <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-highlight">See for yourself.</span></h2>
+        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+      </div>
+      <div class="col-md-5 order-md-1">
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">And lastly, this one. <span class="text-highlight">Checkmate.</span></h2>
+        <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+      </div>
+      <div class="col-md-5">
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <!-- /END THE FEATURETTES -->
+
+  </div><!-- /.container -->
+
+
+  <!-- FOOTER -->
+  <footer class="container">
+    <p class="float-end"><a href="#">Back to top</a></p>
+    <p>&copy; 2017–2021 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+  </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
