--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <img src="img/jamur-1.jpg" class="d-block w-100" alt="...">
             <div class="container">
               <div class="carousel-caption">
-                <h1>First slide label</h1>
-                <p>Some representative placeholder content for the second slide.</p>
+                <h1>Jual Jamur Tiram</h1>
+                <p>Menjual jamur tiram segar setiap harinya.</p>
               </div>
             </div>
           </div>
@@ -70,8 +70,8 @@
             <img src="img/jamur-2.jpg" class="d-block w-100" alt="...">
             <div class="container">
               <div class="carousel-caption">
-                <h1>Second slide label</h1>
-                <p>Some representative placeholder content for the second slide.</p>
+                <h1>Siap Dikirim Kemanapun</h1>
+                <p>Melayani pemesanan dalam dan luar kota Kandangan.</p>
               </div>
             </div>            
           </div>
@@ -79,8 +79,8 @@
             <img src="img/jamur-3.jpg" class="d-block w-100" alt="...">
             <div class="container">
               <div class="carousel-caption">
-                <h1>Third slide label</h1>
-                <p>Some representative placeholder content for the second slide.</p>
+                <h1>Enak, Sehat dan Bergizi</h1>
+                <p>Jamur tiram kaya akan kandungan gizi.</p>
               </div>
             </div>
           </div>
@@ -100,24 +100,24 @@
     <!-- Address & Contact Us -->
     <section class="addrsContact" id="addrsContact">      
       <div class="row" style="height: -webkit-fill-available;">
-        <div class="col-sm-6 text-center address">
+        <div class="col-sm-6 text-center address pb-sm-4 pb-md-4">
             <div class="address-container container">
               <div class="address-content">
-                <img src="img/location.svg" alt="" style="width: 50px;">
+                <img src="img/location.svg" alt="" >
                 <p class="mt-4 mb-2" style="font-size: 20px;">Alamat</p>
-                <p>Untuk melihat alamat yang lebih detail silakan klik tombol dibawah.</p>
-                <a class="btn" href="#" role="button">Selengkapnya</a>
+                <p>Kandangan, HSS, Kalimantan Selatan.</br> Alamat lebih detail silakan klik tombol dibawah</p>
+                <a class="btn" href="https://goo.gl/maps/MMPH9A8LP9o4VDU18" role="button" target="_blank">Alamat Saya</a>
               </div>
             </div>
         </div>
 
-        <div class="col-sm-6 text-center contact">
+        <div class="col-sm-6 text-center contact pb-sm-4 pb-md-4">
           <div class="contact-container container">
             <div class="contact-content">
-              <img src="img/phone-call.svg" alt="" style="width: 50px;">
+              <img src="img/phone-call.svg" alt="" >
               <p class="mt-4 mb-2" style="font-size: 20px;">Kontak</p>
-              <p>Untuk informasi lebih lanjut silakan hubungi saya dengan klik tombol dibawah.</p>
-              <a class="btn" href="#" role="button">Selengkapnya</a>
+              <p>Untuk pemesanan jamur tiram silakan hubungi saya melalui WA dengan klik tombol dibawah ini.</p>
+              <a class="btn" href="https://wa.wizard.id/7f6aff" role="button" target="_blank">Hubungi Saya</a>
             </div>
           </div>
         </div>
@@ -134,8 +134,8 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">First featurette heading. <span class="text-highlight">It’ll blow your mind.</span></h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        <h2 class="featurette-heading"><span class="text-highlight">Kandungan gizi</span> yang terdapat pada Jamur Tiram.</h2>
+        <p class="lead">Berdasarkan penelitian Sunan Pongsamart, biochemistry, Faculty of Pharmaceutical Universitas Chulangkorn, jamur tiram mengandung protein, air, kalori, karbohidrat, dan sisanya berupa serat zat besi, kalsium, vitamin B1, vitamin B2, dan vitamin C. Wahh.. Mantebb banget kan kandungan gizi yang terdapat dari Jamur Tiram ini... || sumber : <a href="https://id.wikipedia.org/wiki/Jamur_tiram#Kandungan_gizi">wikipedia</a> </p>
       </div>
       <div class="col-md-5">
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
@@ -147,8 +147,14 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-highlight">See for yourself.</span></h2>
-        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+        <h2 class="featurette-heading">Karena jamur tiram bergizi. So pasti dong ada<span class="text-highlight"> manfaatnya</span> ketika kita mengonsumsinya.</h2>
+        <p class="lead">
+          Manfaat yang didapatkan ketika kita mengosnumsi jamur tiram diataranya adalah menurunkan kolesterol, sebagai antibakterial dan antitumor, serta dapat menghasilkan enzim hidrolisis dan enzim oksidasi.</br></br>
+
+          Jamur ini juga dipercaya mempunyai khasiat obat untuk berbagai penyakit seperti penyakit lever, diabetes, anemia.          
+          Di samping itu, jamur tiram juga dipercaya mampu membantu penurunan berat badan karena berserat tinggi dan membantu pencernaan.</br></br>
+          Wahhhh.. Ternyata jamur tiram juga bisa membantu menurunkan berat badan loh...&#x1F601;
+      </p>
       </div>
       <div class="col-md-5 order-md-1">
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
@@ -160,11 +166,18 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">And lastly, this one. <span class="text-highlight">Checkmate.</span></h2>
-        <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+        <h2 class="featurette-heading"><span class="text-highlight">Saran penyajian</span> Jamur Tiram yang top markotop..</h2>
+        <p class="lead">
+          Tekstur dari jamur tiram ini terasa padat dan kenyal. Selain itu, jamur jenis ini mudah ditemukan di pasar harganya pun terjangkau.. <br><br>
+          Kalian bisa mengolah jamur ini dengan cara menggorengnya. *kriuk... Kriuk.. Bikin ga berhenti nyemil&#x1F60D;<br><br>
+          Bagi kalian yang tidak suka dengan makanan berminyak, kalian bisa mengolah jamur ini dengan menjadi sup jamur atau bisa juga mengolahnya menjadi pepes jamur.. *membayangkannya saja sudah membuat saya lapar..&#x1F924;
+
+        </p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="img/jamur-goreng.jpg"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg> -->
+
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/saran-penyajian.webp" alt="" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
 
       </div>
     </div>
@@ -179,7 +192,7 @@
   <!-- FOOTER -->
   <footer class="container">
     <p class="float-end"><a href="#">Back to top</a></p>
-    <p>&copy; 2017–2021 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    <p>&copy; Muhammad Hifni | Dibuat dengan secangkir kopi &#x2615;</p>
   </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
