--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <link rel="shortcut icon" type="image/x-icon" href="img/icon-mushrooms.svg">
 
   </head>
-  <body>
+  <body id="home" data-bs-spy="scroll" data-bs-target="#myNavbar" data-bs-offset="0" tabindex="0">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow" id="myNavbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand fw-bold" href="#" style="font-family: cursive;">
           <img src="img/icon-mushrooms.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-          Ulim Igun Jamur
+          Ulim Igun <span class="text-highlight">Jamur</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -31,16 +31,13 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="#home">Home</a>
+            </li>            
+            <li class="nav-item">
+              <a class="nav-link" href="#addrsContact">Address & My Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#marketing">Info Jamur</a>
             </li>            
           </ul>
         </div>
@@ -70,8 +67,8 @@
             <img src="img/jamur-2.jpg" class="d-block w-100" alt="...">
             <div class="container">
               <div class="carousel-caption">
-                <h1>Siap Dikirim Kemanapun</h1>
-                <p>Melayani pemesanan dalam dan luar kota Kandangan.</p>
+                <h1>Harga Terjangkau</h1>
+                <p>Harga perbungkusnya dibandrol dengan harga Rp5.000 saja</p>                
               </div>
             </div>            
           </div>
@@ -79,8 +76,8 @@
             <img src="img/jamur-3.jpg" class="d-block w-100" alt="...">
             <div class="container">
               <div class="carousel-caption">
-                <h1>Enak, Sehat dan Bergizi</h1>
-                <p>Jamur tiram kaya akan kandungan gizi.</p>
+                <h1>Siap Dikirim Kemanapun</h1>
+                <p>Melayani pemesanan dalam dan luar kota Kandangan.</p>
               </div>
             </div>
           </div>
@@ -97,10 +94,22 @@
     </section>
     <!-- End Carousel-->
 
+    <!-- Harga Jamur -->
+    <section class="price" id="price" style="min-height: 50px;">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col pt-2">
+            <marquee behavior="" direction=""><h4>Harga jamur perbungkus Rp5.000 (26/06/2021)</h4></marquee>            
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Harga Jamur -->
+
     <!-- Address & Contact Us -->
-    <section class="addrsContact" id="addrsContact">      
+    <section class="addrsContact" id="addrsContact" data-bs-spy="scroll" data-bs-target="#myNavbar" data-bs-offset="0" tabindex="0">      
       <div class="row" style="height: -webkit-fill-available;">
-        <div class="col-sm-6 text-center address pb-sm-4 pb-md-4">
+        <div class="col-sm-6 text-center address pb-4 pb-sm-4 pb-md-4">
             <div class="address-container container">
               <div class="address-content">
                 <img src="img/location.svg" alt="" >
@@ -111,13 +120,13 @@
             </div>
         </div>
 
-        <div class="col-sm-6 text-center contact pb-sm-4 pb-md-4">
+        <div class="col-sm-6 text-center contact pb-4 pb-sm-4 pb-md-4">
           <div class="contact-container container">
             <div class="contact-content">
               <img src="img/phone-call.svg" alt="" >
               <p class="mt-4 mb-2" style="font-size: 20px;">Kontak</p>
               <p>Untuk pemesanan jamur tiram silakan hubungi saya melalui WA dengan klik tombol dibawah ini.</p>
-              <a class="btn" href="https://wa.wizard.id/7f6aff" role="button" target="_blank">Hubungi Saya</a>
+              <a class="btn" href="https://wa.wizard.id/80b51c" role="button" target="_blank">Hubungi Saya</a>
             </div>
           </div>
         </div>
@@ -125,11 +134,9 @@
     </section>
     <!-- End Address & Contact Us -->
 
-    <!-- Marketing messaging and featurettes
-  ================================================== -->
-  <!-- Wrap the rest of the page in another container to center all the content. -->
 
-  <div class="container marketing">    
+    <!-- Marketing messaging and featurettes-->
+  <div class="container marketing" id="marketing" data-bs-spy="scroll" data-bs-target="#myNavbar" data-bs-offset="0" tabindex="0">    
     <!-- START THE FEATURETTES -->
 
     <div class="row featurette">
@@ -138,8 +145,7 @@
         <p class="lead">Berdasarkan penelitian Sunan Pongsamart, biochemistry, Faculty of Pharmaceutical Universitas Chulangkorn, jamur tiram mengandung protein, air, kalori, karbohidrat, dan sisanya berupa serat zat besi, kalsium, vitamin B1, vitamin B2, dan vitamin C. Wahh.. Mantebb banget kan kandungan gizi yang terdapat dari Jamur Tiram ini... || sumber : <a href="https://id.wikipedia.org/wiki/Jamur_tiram#Kandungan_gizi">wikipedia</a> </p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/manfaat-jamur.jpg" alt="" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
       </div>
     </div>
 
@@ -157,8 +163,7 @@
       </p>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/manfaat-jamur-2.jpg" alt="" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
       </div>
     </div>
 
@@ -175,10 +180,7 @@
         </p>
       </div>
       <div class="col-md-5">
-        <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="img/jamur-goreng.jpg"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg> -->
-
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="img/saran-penyajian.webp" alt="" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
-
       </div>
     </div>
 
@@ -192,7 +194,7 @@
   <!-- FOOTER -->
   <footer class="container">
     <p class="float-end"><a href="#">Back to top</a></p>
-    <p>&copy; Muhammad Hifni | Dibuat dengan secangkir kopi &#x2615;</p>
+    <p>&copy; 2021 - Muhammad Hifni | Dibuat dengan secangkir kopi &#x2615;</p>
   </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
