edit di section price

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="container">
         <div class="row text-center">
           <div class="col pt-2">
-            <marquee behavior="" direction=""><h4>Harga jamur perbungkus Rp5.000 (26/06/2021)</h4></marquee>            
+            <marquee behavior="" direction=""><h4>Harga jamur perbungkus Rp5.000 - 26/06/2021</h4></marquee>            
           </div>
         </div>
       </div>
